--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
     <script>
         // PASTE YOUR KEY HERE
-        const ably = new Ably.Realtime('YOUR_ABLY_API_KEY'); 
+        const ably = new Ably.Realtime('whyK0Q.-8H0rA:_SQSQ2DWPa-nW0h3XbnGBT-yyOE4QrIt6uVLDu-aoEM
+'); 
         const chan = ably.channels.get('main-session');
         const isTeacher = new URLSearchParams(window.location.search).has('teacher');
 
@@ -193,3 +194,4 @@
     </script>
 </body>
 </html>
+
