--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     </div>
 
     <script>
-        const ably = new Ably.Realtime('YOUR_ABLY_KEY_HERE'); 
+        const ably = new Ably.Realtime('whyK0Q.-8H0rA:_SQSQ2DWPa-nW0h3XbnGBT-yyOE4QrIt6uVLDu-aoEM
+'); 
         const chan = ably.channels.get('quiz-room');
         const isTeacher = new URLSearchParams(window.location.search).has('teacher');
         
@@ -171,3 +172,4 @@
     </script>
 </body>
 </html>
+
