--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
     </div>
 
     <script>
-        const ably = new Ably.Realtime('whyK0Q.-8H0rA:_SQSQ2DWPa-nW0h3XbnGBT-yyOE4QrIt6uVLDu-aoEM
-'); 
+        const ably = new Ably.Realtime('whyK0Q.-8H0rA:_SQSQ2DWPa-nW0h3XbnGBT-yyOE4QrIt6uVLDu-aoEM'); 
         const chan = ably.channels.get('quiz-v3');
         const isTeacher = new URLSearchParams(window.location.search).has('teacher');
         
@@ -224,4 +223,5 @@
     </script>
 </body>
 </html>
+
 
